--- a/styles.css
+++ b/styles.css
@@ -177,11 +177,17 @@
 }
 
 .hero-background {
-    background-color: #f0f0f0;
-    border-radius: 10px; 
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('./bg.png'); /* 実際の画像パスに変更してください */
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
     z-index: 0;
-    opacity: 0.3;
+    opacity: 0.7; /* 透明度を調整 */
     transition: opacity 1s ease;
 }
 
@@ -192,11 +198,11 @@
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 1s ease, transform 1s ease;
-    background-color: #f0f0f0;
+    /* background-color: #f0f0f0; */
 }
 
 .hero-image {
-    max-width: 60%;
+    max-width: 80%;
     height: auto;
     margin: 0 auto;
     display: block;
@@ -221,7 +227,7 @@
 .hero-main-title {
     font-size: 2.8rem;
     font-weight: bold;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     color: #333;
 }
 
@@ -236,6 +242,48 @@
     padding: 10px 30px;
     font-size: 1.1rem;
     display: inline-block; 
+    transition: all 0.3s ease;
+    position: relative;
+    overflow: hidden;
+}
+
+.hero-cta-button::after,
+.hero-cta-button-mobile::after {
+    content: "\f061"; /* FontAwesome の右矢印のユニコード */
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    position: absolute;
+    right: -20px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: right 0.3s ease;
+}
+
+.hero-cta-button:hover::after,
+.hero-cta-button-mobile:hover::after {
+    right: 10px;
+}
+
+.hero-cta-button:hover,
+.hero-cta-button-mobile:hover {
+    padding-right: 40px;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.05);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.hero-cta-button,
+.hero-cta-button-mobile {
+    animation: pulse 2s infinite;
 }
 
 .fade-in {
@@ -351,6 +399,11 @@
         flex-direction: column;
     }
 
+    .hero .col-md-6.order-2 {
+        padding-top: 0 !important;    /* 上の余白を小さく */
+        padding-bottom: 0 !important; /* 下の余白を小さく */
+    }
+
     .hero-image {
         max-width: 100%;
         margin-bottom: 0;
@@ -413,6 +466,27 @@
     #business-opportunities,
     #team {
         margin-top: 30px;
+    }
+
+        #showcases .row.align-items-center {
+            margin-top: 30px;  /* モバイル時の上部余白 */
+        }
+    
+        #showcases .row.align-items-center:first-child {
+            margin-top: 0;  /* 最初の要素には余白を追加しない */
+        }
+    
+        #showcases .col-md-6 {
+            margin-bottom: 20px;  /* テキストとイメージの間に少し余白を追加 */
+        }
+    
+        #showcases .showcase-container {
+            margin-bottom: 20px;  /* イメージの下に少し余白を追加 */
+        }
+    
+    /* 自己分析セクションの調整 */
+    #showcases .row.align-items-center:last-child .col-md-6:first-child {
+        margin-bottom: 20px;  /* 自己分析の画像と説明文の間に余白を追加 */
     }
 
 }
