--- a/styles.css
+++ b/styles.css
@@ -215,6 +215,8 @@ html {
     position: relative;
     z-index: 5;
     width: 100%;
+    height: 100%; /* heroの高さに合わせる */
+
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 1s ease, transform 1s ease;
